--- a/profiles/static/css/changed_password.css
+++ b/profiles/static/css/changed_password.css
@@ -69,7 +69,7 @@ input:focus {
 }
 
 
-button {
+.btn {
     background-color: var(--primary-color);
     color: #000;
     border: none;
@@ -81,8 +81,14 @@ button {
     transition: background-color 0.2s;
 }
 
-button:hover {
+.btn:hover {
     background-color: var(--button-hover);
+    color: black !important;
+}
+
+.btn:active{
+    background-color: #0cbda0 !important;
+    color: black !important;
 }
 
 .buttons {
