--- a/profiles/templates/changed_password.html
+++ b/profiles/templates/changed_password.html
@@ -38,11 +38,11 @@
                 
         
                 <div class="buttons">
-                    <button type="submit">Cambiar Contraseña</button>
+                    <button class="btn btn-primary" type="submit">Cambiar Contraseña</button>
                 </div>
             </form>  
             <div class="buttons">
-                <button><a href="{% url 'perfil' %}">Atras</a></button>
+                <a class="btn btn-primary" href="{% url 'perfil' %}">Atras</a>
             </div>     
             
         </div>
