--- a/cart/templates/cart_detail.html
+++ b/cart/templates/cart_detail.html
@@ -49,7 +49,7 @@
             <p style="font-size: 18px; margin-bottom: 10px;">Subtotal: {{ cart.subtotal | format_price }}</p>
             <hr style="border-top: 1px solid #333;">
             <p style="font-size: 18px; font-weight: bold;">Total: {{ cart.total | format_price }}</p>
-            <a href="#" class="btn btn-primary">Proceder al pago</a> <!--{% url 'orden' %}-->
+            <a href="{% url 'orden' %}" class="btn btn-primary">Proceder al pago</a>
             <button class="btn btn-secondary" style="margin-top: 10px; background-color: #444; border: none;">Continuar comprando</button>
         </div>
         {% else %}
