--- a/payment/templates/confirmed.html
+++ b/payment/templates/confirmed.html
@@ -4,8 +4,11 @@
 
 {% block content %}
 
-<H1>CONFIRMADO
-    {{resultado}}
-</H1>
+<div style="background: white;">
+    <H1>CONFIRMADO
+        {{resultado}}
+    </H1>
+</div>
+
 
 {% endblock %}
