--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="es">
--
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -35,6 +35,7 @@
             <a class="nav-link text-light" href="#categories">Categorias</a>
             {% if user.is_authenticated %}
             <a class="nav-link text-light" href="{% url 'logout' %}">Cerrar sesion</a>
+            <a class="nav-link text-light" href="{% url 'historial_orden' %}">Mis compras</a>
             {% endif %}
           </div>
         </div>
