--- a/orden/templates/historial_compras.html
+++ b/orden/templates/historial_compras.html
@@ -11,11 +11,13 @@
                 <ul>
                     {% for item in orden.productos_orden.all %}
                         <img src="{{ item.producto.main_image.url }}" alt="{{ item.producto.name }}" width="50px" height="50px">
-                        {{ item.producto.name }} x{{ item.quantity }} - {{ orden.get_status_display }} total: ${{ orden.total }}
+                        {{ item.producto.name }} x{{ item.quantity }} - 
                     {% endfor %}
                     {% if orden.status == 'PAYED' or orden.status == 'CANCELED' %}
                         <a href="orden.id">Cancelar compra</a>
                     {% endif %}
+                    {{ orden.get_status_display }}
+                    total: ${{ orden.total }}
                     <p>Pagado el: {{ orden.fecha_pagada|date:"d/m/Y H:i" }}</p>
                 </ul>
                 <a href="{% url 'detalle_compra' orden.id %}">Ver detalle</a>
