--- a/payment/templates/email_confirm.html
+++ b/payment/templates/email_confirm.html
@@ -2,10 +2,13 @@
 <html>
     <body>
         {% for products in orden.productos_orden.all %}
+                Numero Orden: {{orden.ordenID | slice:":8"}}
                 Nombre producto: {{products.producto.name}}
                 Cantidad: {{products.quantity}}
                 Nombre producto: {{products.producto.price}}
-                {{products.producto.main_image.url}}
+                {% if products.producto.main_image %}
+                    <img src="{{products.producto.main_image.url}}" alt="ImagenProductosComprados">
+                {% endif %}  
                 Envio: {{orden.envio_total}}
                 Total: {{orden.total}}
         {% endfor %}
