--- a/adminPanel/templates/gestion_productos/list_product.html
+++ b/adminPanel/templates/gestion_productos/list_product.html
@@ -9,6 +9,19 @@
             <table class="table">
                 <thead>
                     <tr>
+                        <th>{% include 'gestion_productos/filtros/filtro_sku.html' %}</th>
+                        <th></th>
+                        <th></th>
+                        <th>{% include 'gestion_productos/filtros/filtro_marca.html' %}</th>
+                        <th>Filtro por categoria<input type="text"></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th>filtro por estado(activo-agotado)</th>
+                    </tr>
+                </thead>
+                <thead>
+                    <tr>
                         <th>Sku</th>
                         <th>Nombre</th>
                         <th>Precio</th>
@@ -18,6 +31,7 @@
                         <th>Imagen</th>
                         <th>Opciones</th>
                         <th>Ir a producto</th>
+                        <th>Estado</th>
                     </tr>
                 </thead>
                 {% for product in products %}
@@ -40,6 +54,11 @@
                             <a class="btn btn-danger" onclick="eliminarProducto({{product.id}})">Eliminar</a>
                         </td>
                         <td><a href="#">Ir a producto</a></td>
+                        <th>
+                            {% if product.status == 'ACTIVE' %} <p style="color: greenyellow; background-color: green;">{{product.get_status_display}}</p> 
+                            {% elif product.status == 'INACTIVE' %} <p style="color: red; background-color: rgb(100, 2, 2);">{{product.get_status_display}}</p> 
+                            {% endif %}
+                        </th>
 
                     </tr>
                 </tbody>
@@ -47,6 +66,7 @@
             </table>
 
             <a href="{% url 'list_ordenes_admin' %}">Ir a listado ordenes</a>
+            <a href="{% url 'agregar_product' %}">Agregar nuevo producto</a>
         </div>
     </div>
     
