--- a/products/templates/detail_product.html
+++ b/products/templates/detail_product.html
@@ -31,7 +31,10 @@
         </p>
         
         <div class="quantity-selector">
-            {% include 'add.html' %}
+            {% include 'add.html' %} 
+        </div>
+        <div>
+            
         </div>
         
     </div>
