--- a/cart/templates/add.html
+++ b/cart/templates/add.html
@@ -3,12 +3,18 @@
     <input type="hidden" name="product_id" value="{{ product.id }}">
     <div class="quantity-selector">
         <button type="button" class="btn btn-danger d-inline" id="remove">-</button>
-        <input type="number" value="1" class="form-control-1 d-inline"  id="quantity" name="quantity"readonly>
+        <input type="number" value="{% if product.stock == 0 %}0{% else %}1{% endif %}" class="form-control-1 d-inline"  id="quantity" name="quantity"readonly>
         <button type="button" class="btn btn-danger d-inline" id="add">+</button>
+
+        <p style="margin-left: 50px; margin-top: 15px;">Stock: {{product.stock}}</p>
     </div>
     <div class="action-buttons">
-        <button class="add-to-cart" type="submit">Agregar al carrito</button>
+        <button class="add-to-cart" type="submit" id="add-to-cart-button" {% if product.stock == 0 %}disabled{% endif %}>Agregar al carrito</button>
     </div>
+    {% if product.stock == 0 %}
+        <p style="color: red;">No hay stock disponible para este producto.</p>
+    {% endif %}
+
 </form>
 
 <script>
@@ -16,9 +22,13 @@
         const add = document.getElementById('add');
         const remove = document.getElementById('remove');
         const quantity = document.getElementById('quantity');
+        const stock = {{ product.stock }}; 
+
 
         add.addEventListener('click', function () {
-            quantity.value = parseInt(quantity.value) + 1;
+            if (parseInt(quantity.value) < stock) {
+                quantity.value = parseInt(quantity.value) + 1;
+            }
         });
 
         remove.addEventListener('click', function () {
