--- a/adminPanel/templates/gestion_pedidos/filtros/filtro_numero_pedido.html
+++ b/adminPanel/templates/gestion_pedidos/filtros/filtro_numero_pedido.html
@@ -1,5 +1,5 @@
 <form action="{% url 'buscar_orden' %}" method="GET">
-    <input type="text" name="searchOrden" value="{{ query }}"> 
+    <input type="text" name="searchNumOrden" placeholder="numero orden" value="{{ querynumorden }}"> 
     <button type="submit" class="btn btn-primary" >
         Buscar orden
     </button>
