--- a/adminPanel/templates/gestion_pedidos/filtros/filtro_fecha_pedido.html
+++ b/adminPanel/templates/gestion_pedidos/filtros/filtro_fecha_pedido.html
@@ -1,4 +1,4 @@
-<!-- <form action="{% url 'buscar_fecha_pedidos' %}" method="GET">
+<!-- <form action="" method="GET">
     <input type="text" name="searchOrden" value="{{ query }}"> 
     <button type="submit" class="btn btn-primary" >
         Buscar orden
