--- a/templates/index.html
+++ b/templates/index.html
@@ -24,55 +24,26 @@
     </div>
 
     <div class="container-our-categories">
-        <div class="row">
-            <div class="col-12 col-md-4">
-                <div class="card card-hover shadow-sm border-0 rounded-4 mx-auto" style="max-width: 300px; ">
-                    <div class="bg-light d-flex align-items-center justify-content-center" style="height: 130px; border-radius: 10px;">
-                        <span class="text-muted fs-4">400 × 320</span>
+        <div class="col-4-md col-12">
+            <div class="row">
+                {% for categorys in categoria %}
+                    <div class="card card-hover shadow-sm border-0 rounded-4 mx-auto" style="max-width: 300px; ">
+                        <div class="bg-light d-flex align-items-center justify-content-center" style="height: 130px; border-radius: 10px;">
+                            <span class="text-muted fs-4">400 × 320</span>
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title fw-bold">{{categorys.name}}</h5>
+                            <p class="card-text">
+                                Descripcion de los productos en esta categoria
+                            </p>
+                            <a href="#" class="btn rounded-pill px-4" style="background: #17F0D2;">Ver</a>
+                        </div>
                     </div>
-                    <div class="card-body">
-                        <h5 class="card-title fw-bold">Categoria</h5>
-                        <p class="card-text">
-                            Descripcion de los productos en esta categoria
-                        </p>
-                        <a href="#" class="btn rounded-pill px-4" style="background: #17F0D2;">Ver</a>
-                    </div>
-                </div>
-                
-            </div>
-            <div class="col-12 col-md-4">
-                <div class="card card-hover shadow-sm border-0 rounded-4 mx-auto"  style="max-width: 300px;">
-                    <div class="bg-light d-flex align-items-center justify-content-center " style="height: 130px; border-radius: 10px;">
-                        <span class="text-muted fs-4">400 × 320</span>
-                    </div>
-                    <div class="card-body">
-                        <h5 class="card-title fw-bold">Categoria</h5>
-                        <p class="card-text">
-                            Descripcion de los productos en esta categoria
-                        </p>
-                        <a href="#" class="btn rounded-pill px-4" style="background: #17F0D2;">Ver</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-12 col-md-4">
-                <div class="card card-hover shadow-sm border-0 rounded-4 mx-auto " style="max-width: 300px;">
-                    <div class="bg-light d-flex align-items-center justify-content-center " style="height: 130px; border-radius: 10px;">
-                        <span class="text-muted fs-4">400 × 320</span>
-                    </div>
-                    <div class="card-body">
-                        <h5 class="card-title fw-bold">Categoria</h5>
-                        <p class="card-text">
-                            Descripcion de los productos en esta categoria
-                        </p>
-                        <a href="#" class="btn rounded-pill px-4" style="background: #17F0D2;">Ver</a>
-                    </div>
-                </div>
+                {% endfor %}
             </div>
         </div>
         
     </div>
-
-
 </section>
 
 <section class="containter featured-products bg-secondary" >
@@ -81,90 +52,28 @@
     </div>
 
     <div class="container-featured-products bg-secondary">
-        <div class="row">
-            <div class="col-12 col-md-4">
-                <div class="card card-hover shadow-sm border-0 rounded-4 mx-auto" style="max-width: 300px; position: relative;">
-                    
-                    <div class="position-relative" style="height: 130px; border-radius: 10px;">
-                        <div class="bg-light d-flex align-items-center justify-content-center" style="height: 130px; border-radius: 10px;">
-                            <span class="text-muted fs-4">400 × 320</span>
-                        </div>
-                        
-                        <div class="overlay">
-                            <h6 class="fw-bold m-0" style="color: #2C2F47;">Categoria</h6>
-                        </div>
-                    </div>
-                    
-                   
-                    <div class="card-body">
-                        <h5 class="card-title fw-bold">Nombre producto</h5>
-                        <p class="card-text mb-2" style="color: white;">Precio</p>
-                        <a href="#" class="btn rounded-pill px-4" style="background: #17F0D2;">Añadir al carrito</a>
-                    </div>
-                </div>                
-            </div>
-            <div class="col-12 col-md-4">
-                <div class="card card-hover shadow-sm border-0 rounded-4 mx-auto" style="max-width: 300px; position: relative;">
-                   
-                    <div class="position-relative" style="height: 130px; border-radius: 10px;">
-                        <div class="bg-light d-flex align-items-center justify-content-center" style="height: 130px; border-radius: 10px;">
-                            <span class="text-muted fs-4">400 × 320</span>
-                        </div>
-                       
-                        <div class="overlay">
-                            <h6 class="fw-bold m-0" style="color: #2C2F47;">Categoria</h6>
-                        </div>
-                    </div>
-                    
-                    
-                    <div class="card-body">
-                        <h5 class="card-title fw-bold">Nombre producto</h5>
-                        <p class="card-text mb-2" style="color: white;">Precio</p>
-                        <a href="#" class="btn rounded-pill px-4" style="background: #17F0D2;">Añadir al carrito</a>
-                    </div>
-                </div>                
-            </div>
-            <div class="col-12 col-md-4">
-                <div class="card card-hover shadow-sm border-0 rounded-4 mx-auto" style="max-width: 300px; position: relative;">
-                    
-                    <div class="position-relative" style="height: 130px; border-radius: 10px;">
-                        <div class="bg-light d-flex align-items-center justify-content-center" style="height: 130px; border-radius: 10px;">
-                            <span class="text-muted fs-4">400 × 320</span>
-                        </div>
-                        
-                        <div class="overlay">
-                            <h6 class="fw-bold m-0" style="color: #2C2F47;">Categoria</h6>
-                        </div>
-                    </div>
-                    
+        <div class="col-12 col-md-4">
+            <div class="row">
+                {% for product_vent in mas_vendido %}
+                <div class="card card-hover shadow-sm border-0 rounded-4 mx-auto" style="max-width: 300px;">
                 
-                    <div class="card-body">
-                        <h5 class="card-title fw-bold">Nombre producto</h5>
-                        <p class="card-text mb-2" style="color: white;">Precio</p>
-                        <a href="#" class="btn rounded-pill px-4" style="background: #17F0D2;">Añadir al carrito</a>
-                    </div>
-                </div>                
-            </div>
-            <div class="col-12 col-md-4">
-                <div class="card card-hover shadow-sm border-0 rounded-4 mx-auto" style="max-width: 300px; position: relative;">
-                   
                     <div class="position-relative" style="height: 130px; border-radius: 10px;">
                         <div class="bg-light d-flex align-items-center justify-content-center" style="height: 130px; border-radius: 10px;">
                             <span class="text-muted fs-4">400 × 320</span>
                         </div>
-                       
+                        
                         <div class="overlay">
-                            <h6 class="fw-bold m-0" style="color: #2C2F47;">Categoria</h6>
+                            <h6 class="fw-bold m-0" style="color: #2C2F47;">{{product_vent.category}}</h6>
                         </div>
                     </div>
                     
-                    
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Nombre producto</h5>
-                        <p class="card-text mb-2" style="color: white;">Precio</p>
+                        <h5 class="card-title fw-bold">{{product_vent.name}}</h5>
+                        <p class="card-text mb-2" style="color: white;">{{product_vent.price}}</p>
                         <a href="#" class="btn rounded-pill px-4" style="background: #17F0D2;">Añadir al carrito</a>
                     </div>
-                </div>                
+                </div>  
+                {% endfor %}             
             </div>
         </div>
     </div>
