--- a/adminPanel/templates/gestion_productos/list_product.html
+++ b/adminPanel/templates/gestion_productos/list_product.html
@@ -13,7 +13,7 @@
                         <th></th>
                         <th></th>
                         <th>{% include 'gestion_productos/filtros/filtro_marca.html' %}</th>
-                        <th>Filtro por categoria<input type="text"></th>
+                        <th>{% include 'gestion_productos/filtros/filtro_categoria.html' %}</th>
                         <th></th>
                         <th></th>
                         <th></th>
