--- a/products/templates/productos_categorias_marcas.html
+++ b/products/templates/productos_categorias_marcas.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% load precios_tag %}
 {% load static %}
+{% load custom_filter %}
 {% block content %}
 <link rel="stylesheet" href="{% static 'css/list_products.css' %}">
 
@@ -17,7 +18,7 @@
         <div class="content-filter" style="background: lightblue; display:flex; flex-direction: column;">
             <h6>Filtro por categoria</h6>
             {% for categoys in categorias %}
-            <a href="{% url 'categorias_marcas_filtro' 'categorias' categoys.id %}">
+            <a href="{% url 'categorias_marcas_filtro' 'categoria' categoys.id|urlsafe_base64_encode_filter %}">
                 {{categoys.name}}
             </a>
             {% endfor %}
@@ -25,7 +26,7 @@
 
             <h6>Filtro por marcas</h6>
             {% for brand in marcas %}
-            <a href="{% url 'categorias_marcas_filtro' 'marca' brand.id %}">
+            <a href="{% url 'categorias_marcas_filtro' 'marca' brand.id|urlsafe_base64_encode_filter %}">
                 {{brand.name}}
             </a>
             {% endfor %}
@@ -33,6 +34,15 @@
             <a href="{% url 'view_products' %}">Ver todos los productos</a>
             <h6>Filtro por precio</h6>
             Min <input type="range"> Max
+            <form method="get" action="{% url 'categorias_marcas_filtro' tipo uidb64 %}">
+                <label for="price_order">Ordenar por:</label>
+                <select name="price_order" id="price_order">
+                    <option value="recomendado" {% if request.GET.price_order == 'recomendado' %}selected{% endif %}>Recomendados</option>
+                    <option value="asc" {% if request.GET.price_order == 'asc' %}selected{% endif %}>Precio: Menor a mayor</option>
+                    <option value="desc" {% if request.GET.price_order == 'desc' %}selected{% endif %}>Precio: Mayor a menor</option>
+                </select>
+                <button type="submit">Filtrar</button>
+            </form>
         </div>
 
     </div>
