--- a/templates/index.html
+++ b/templates/index.html
@@ -46,17 +46,16 @@
     </div>
 </section>
 
-<section class="containter featured-products bg-secondary" >
+<section class="containter featured-products bg-secondary" style="padding-top: 5%;">
     <div class="text-center" style="color: #17F0D2;">
         <h3 class="title-featured">Productos Destacados</h3>
     </div>
 
-    <div class="container-featured-products bg-secondary">
-        <div class="col-12 col-md-4">
+    <div class="container-featured-products">
+        <div class="col-4-md col-12">
             <div class="row">
                 {% for product_vent in mas_vendido %}
                 <div class="card card-hover shadow-sm border-0 rounded-4 mx-auto" style="max-width: 300px;">
-                
                     <div class="position-relative" style="height: 130px; border-radius: 10px;">
                         <div class="bg-light d-flex align-items-center justify-content-center" style="height: 130px; border-radius: 10px;">
                             <span class="text-muted fs-4">400 × 320</span>
