--- a/products/templates/list_products.html
+++ b/products/templates/list_products.html
@@ -61,8 +61,8 @@
             <span id="precio-valor">$50.000</span>
             <br>
             <form method="get" action="{% url 'view_products' %}">
-                <label for="price_order">Ordenar por:</label>
                 <select name="price_order" id="price_order">
+                    <option value="recomendado" disabled selected>Ordenar por</option>
                     <option value="recomendado" {% if request.GET.price_order == 'recomendado' %}selected{% endif %}>Recomendados</option>
                     <option value="asc" {% if request.GET.price_order == 'asc' %}selected{% endif %}>Precio: Menor a mayor</option>
                     <option value="desc" {% if request.GET.price_order == 'desc' %}selected{% endif %}>Precio: Mayor a menor</option>
